force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Duration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Duration__c</fullName>
    <formula>CLQ_Investigation_Begin_Date__c  -  CLQ_Submitted_Date_Incident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>