force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Effective_Date_of_Closure__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Effective_Date_of_Closure__c</fullName>
    <label>Effective Date of Closure</label>
    <type>Date</type>
</CustomField>