force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Emergency_Services_police_fire_amb__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Emergency_Services_police_fire_amb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Services (police/fire/ambul)</label>
    <type>Checkbox</type>
</CustomField>