force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Emergency_Services_Transported_Child__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Emergency_Services_Transported_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Services Transported Child</label>
    <type>Checkbox</type>
</CustomField>