force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Enforcement_Action__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Enforcement_Action__c</fullName>
    <label>Enforcement Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AO Appeal without a Stay</fullName>
            </value>
            <value>
                <fullName>AO Appeal with Stay</fullName>
            </value>
            <value>
                <fullName>AO Issued Certified Mail</fullName>
            </value>
            <value>
                <fullName>AO Mailed via Certificate of Mailing</fullName>
            </value>
            <value>
                <fullName>AO Received by Program</fullName>
            </value>
            <value>
                <fullName>Caretaker Letter Sent</fullName>
            </value>
            <value>
                <fullName>CDJFS Withdrawal</fullName>
            </value>
            <value>
                <fullName>Cease and Desist Letter Issued</fullName>
            </value>
            <value>
                <fullName>Enforcement Case Accepted</fullName>
            </value>
            <value>
                <fullName>Enforcement Case Rejected</fullName>
            </value>
            <value>
                <fullName>Hearing Decision</fullName>
            </value>
            <value>
                <fullName>Hearing Occurred</fullName>
            </value>
            <value>
                <fullName>Hearing Requested</fullName>
            </value>
            <value>
                <fullName>ODJFS Withdrawal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PAO Issued Certified Mail</fullName>
            </value>
            <value>
                <fullName>PAO Mailed Certificate of Mailing</fullName>
            </value>
            <value>
                <fullName>PAO Received by Program</fullName>
            </value>
            <value>
                <fullName>Revocation Recommended by County</fullName>
            </value>
            <value>
                <fullName>Revocation Recommended by State</fullName>
            </value>
            <value>
                <fullName>Revocation Rejected</fullName>
            </value>
            <value>
                <fullName>Revoked Date</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Suspension Accepted</fullName>
            </value>
            <value>
                <fullName>Suspension Lifted</fullName>
            </value>
            <value>
                <fullName>Suspension Recommended by County</fullName>
            </value>
            <value>
                <fullName>Suspension Recommended by State</fullName>
            </value>
            <value>
                <fullName>Suspension Rejected</fullName>
            </value>
            <value>
                <fullName>Voluntary Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>