force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Enforcement_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Enforcement_Submitted__c</fullName>
    <label>Enforcement Submitted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>