force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Enforcement_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Enforcement_Type__c</fullName>
    <label>Enforcement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denial of Application</fullName>
            </value>
            <value>
                <fullName>Revocation</fullName>
            </value>
            <value>
                <fullName>Immediate Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>