force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>