force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_General_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_General_Information__c</fullName>
    <inlineHelpText>This field should contain general information regarding the complaint allegation and will print on the Complaint Intake/Disposition report and should not include names, contact information or any other details that might be used to identify the reporter.</inlineHelpText>
    <label>General Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>