force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Hearing_Requested__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Hearing_Requested__c</fullName>
    <label>Hearing Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>