force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Identifying_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Identifying_Information__c</fullName>
    <inlineHelpText>This field is for recording any identifying/confidential information related to the complaint.  This information is not printed on the Complaint Intake/Disposition report.</inlineHelpText>
    <label>Additional and Identifying Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>