force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_If_Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>CLQ_If_Other_Describe__c</fullName>
    <description>Use this field if the agency referral type is &quot;Other&quot;.</description>
    <inlineHelpText>Use this field if the agency referral type is &quot;Other&quot;.</inlineHelpText>
    <label>If &apos;Other&apos; Describe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>