force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Inappropriate_touching_sexual_play__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inappropriate_touching_sexual_play__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inappropriate touching/sexual play</label>
    <type>Checkbox</type>
</CustomField>