force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Incident_Injury_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Incident_Injury_Submitted__c</fullName>
    <label>Incident_Injury_Submitted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>