force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Filter Criteria does not match, Please Select Incident/Complaint Inspection.</errorMessage>
        <filterItems>
            <field>CLQ_Inspection__c.CLQ_Inspection_Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </filterItems>
        <filterItems>
            <field>CLQ_Inspection__c.CLQ_Inspection_age__c</field>
            <operation>lessOrEqual</operation>
            <value>365</value>
        </filterItems>
        <filterItems>
            <field>CLQ_Inspection__c.CLQ_Inspection_Type__c</field>
            <operation>equals</operation>
            <value>Incident / Injury / Illness, Complaint</value>
        </filterItems>
        <filterItems>
            <field>CLQ_Inspection__c.CLQ_Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.CLQ_Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipName>CLQ_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>