force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Intake_By__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Intake_By__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake By</label>
    <type>Text</type>
</CustomField>