force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Intake_Date__c</fullName>
    <label>Intake Date</label>
    <type>Date</type>
</CustomField>