force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Intruder_Enters_the_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Intruder_Enters_the_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intruder Enters the Program</label>
    <type>Checkbox</type>
</CustomField>