force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Investigation_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Investigation_Begin_Date__c</fullName>
    <label>Investigation Begin Date</label>
    <type>Date</type>
</CustomField>