force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Investigation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Investigation_Outcome__c</fullName>
    <label>Investigation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Probable Cause</fullName>
            </value>
            <value>
                <fullName>Licensed Type B Program</fullName>
            </value>
            <value>
                <fullName>Operating Within Legal Limits</fullName>
            </value>
            <value>
                <fullName>Agreed to Cease Operation</fullName>
            </value>
            <value>
                <fullName>Now Licensed</fullName>
            </value>
            <value>
                <fullName>Lowered Number of Children</fullName>
            </value>
            <value>
                <fullName>Enforcement Action</fullName>
            </value>
            <value>
                <fullName>Created in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>