force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Is_it_Ok_to_Contact_the_Complainant__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_it_Ok_to_Contact_the_Complainant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Ok to Contact the Complainant</label>
    <type>Checkbox</type>
</CustomField>