force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Joint_Inspection_With__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Joint_Inspection_With__c</fullName>
    <label>Joint Inspection With</label>
    <type>TextArea</type>
</CustomField>