force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Last_Date_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Date_of_Operation__c</fullName>
    <description>Date on which the operation/program is closed.</description>
    <label>Last Date of Operation</label>
    <type>Date</type>
</CustomField>