force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Level1_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Level1_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level1 Approval Completed</label>
    <type>Checkbox</type>
</CustomField>