force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Licensing_Field_Office__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Licensing_Field_Office__c</fullName>
    <formula>text(CLQ_Program__r.CLQ_County__r.CCC_Field_Officers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensing Field Office</label>
    <type>Text</type>
</CustomField>