force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Local_Health_Department_Contacted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Local_Health_Department_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Health Department Contacted</label>
    <type>Checkbox</type>
</CustomField>