force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Location_Description__c</fullName>
    <label>Location Description</label>
    <type>TextArea</type>
</CustomField>