force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Medication_error__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medication_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medication error</label>
    <type>Checkbox</type>
</CustomField>