force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Method_of_Investigation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Method_of_Investigation__c</fullName>
    <label>Method of Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-site Inspection</fullName>
            </value>
            <value>
                <fullName>Telephone Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>