force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Natural_Man_made_Disaster__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Natural_Man_made_Disaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Natural / Man-made Disaster</label>
    <type>Checkbox</type>
</CustomField>