force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_No_Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_Investigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if no Inspection is required. If unchecked, method of Inspection is required. If checked, reason is required.</inlineHelpText>
    <label>No Inspection Required</label>
    <type>Checkbox</type>
</CustomField>