force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_No_Pulse_Not_Breathing__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_Pulse_Not_Breathing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Pulse / Not Breathing</label>
    <type>Checkbox</type>
</CustomField>