force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Notify_Assignee__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Notify_Assignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if Email notification needs to be sent - used only in process builder - not on page layouts</description>
    <label>Notify Assignee</label>
    <type>Checkbox</type>
</CustomField>