force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Number_of_Children_Involved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Children_Involved__c</fullName>
    <description>Enter the number of children involved in the incident.</description>
    <inlineHelpText>Enter the number of children involved in the incident.</inlineHelpText>
    <label>Number of Children Involved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>