force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Number_of_Children_Reported__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Children_Reported__c</fullName>
    <label>Number of Children Reported</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>