force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Object_inserted_into_body_part__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Object_inserted_into_body_part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object inserted into body part</label>
    <type>Checkbox</type>
</CustomField>