force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_OLAS_Attorney_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OLAS_Attorney_Assigned__c</fullName>
    <label>OLAS Attorney Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Welsh</fullName>
            </value>
            <value>
                <fullName>Denise Pleska</fullName>
            </value>
            <value>
                <fullName>Harvey Sukienik</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>