force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Operator_Own_Children_2_6_yo__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Operator_Own_Children_2_6_yo__c</fullName>
    <inlineHelpText>Own or Related</inlineHelpText>
    <label>Operator&apos;s Children ( 2-6 yo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>