force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Operator_Own_Children_Under_2_yo__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Operator_Own_Children_Under_2_yo__c</fullName>
    <inlineHelpText>Own or Related</inlineHelpText>
    <label>Operator&apos;s Children (Under 2 yo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>