force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other__c</fullName>
    <inlineHelpText>This field must be entered if &apos;Other&apos; option is selected in disposition.</inlineHelpText>
    <label>Other</label>
    <length>18</length>
    <type>Text</type>
</CustomField>