force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Action_Description__c</fullName>
    <label>Other Action Description</label>
    <type>TextArea</type>
</CustomField>