force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Attorney__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Attorney__c</fullName>
    <label>Other Attorney</label>
    <length>60</length>
    <type>Text</type>
</CustomField>