force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Children_2_to_6_yo__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Children_2_to_6_yo__c</fullName>
    <label>Other Children (2 to 6 yo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>