force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Contact_Info__c</fullName>
    <label>Other Contact Info</label>
    <type>TextArea</type>
</CustomField>