force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Injury_Requiring_Medical_Treat__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Injury_Requiring_Medical_Treat__c</fullName>
    <label>Other Injury Requiring Med Trtmt Desc</label>
    <type>TextArea</type>
</CustomField>