force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_injury_requiring_medical_trmt__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_injury_requiring_medical_trmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other injury requiring medical treatment</label>
    <type>Checkbox</type>
</CustomField>