force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Other_Referral_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Referral_Information__c</fullName>
    <label>Other Referral Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>