force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Othercbx__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Othercbx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>