force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Outbreak_of_illness__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Outbreak_of_illness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbreak of illness</label>
    <type>Checkbox</type>
</CustomField>