force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Outcome_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Outcome_Reason_Code__c</fullName>
    <label>Reason for Case Closure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Activity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Voluntary Closure</fullName>
            </value>
            <value>
                <fullName>SO Withdrawn - State</fullName>
            </value>
            <value>
                <fullName>SO Withdrawn - County</fullName>
            </value>
            <value>
                <fullName>PAO Withdrawn - State</fullName>
            </value>
            <value>
                <fullName>PAO Withdrawn - County</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Denied Application</fullName>
            </value>
            <value>
                <fullName>Not Revoked</fullName>
            </value>
            <value>
                <fullName>Suspension Overturned</fullName>
            </value>
            <value>
                <fullName>Ministerial Closing</fullName>
            </value>
            <value>
                <fullName>Created in Error</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>