force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Parent_followed_up_with_Medical__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Parent_followed_up_with_Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent followed up with Medical/Dental</label>
    <type>Checkbox</type>
</CustomField>