force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>