force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Poison_Control_Contacted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Poison_Control_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poison Control Contacted</label>
    <type>Checkbox</type>
</CustomField>