force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Poisoning__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Poisoning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poisoning</label>
    <type>Checkbox</type>
</CustomField>