force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Prior_On_sites__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_On_sites__c</fullName>
    <label>Prior On-sites</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>