force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_City__c</fullName>
    <formula>CLQ_Program__r.CLQ_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program City</label>
    <type>Text</type>
</CustomField>