force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_County__c</fullName>
    <formula>IF(CLQ_Program__r.CLQ_County__c != null, CLQ_Program__r.CLQ_County__r.Name, IF(CLQ_County_Alleged_Ops__c != null, CLQ_County_Alleged_Ops__r.Name, CLQ_County_Complainant__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program County</label>
    <type>Text</type>
</CustomField>