force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Email_referenced__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Email_referenced__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Email</label>
    <type>Text</type>
</CustomField>