force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Licensing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Licensing_Specialist__c</fullName>
    <formula>CLQ_Program__r.CLQ_Licensing_Specialist__r.FirstName &amp; &quot; &quot; &amp;  CLQ_Program__r.CLQ_Licensing_Specialist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Licensing Specialist</label>
    <type>Text</type>
</CustomField>