force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Number_Formula__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Number</label>
    <type>Text</type>
</CustomField>