force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Recom_Medical_Dental_Care__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Recom_Medical_Dental_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Recommended Medical/Dental Care</label>
    <type>Checkbox</type>
</CustomField>