force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Street_Address2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Street_Address2__c</fullName>
    <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Street Address2</label>
    <type>Text</type>
</CustomField>