force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Program_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Zipcode__c</fullName>
    <formula>CLQ_Program__r.CLQ_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Zipcode</label>
    <type>Text</type>
</CustomField>