force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Prohibitive_discipline_techniques__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prohibitive_discipline_techniques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prohibitive discipline techniques</label>
    <type>Checkbox</type>
</CustomField>