force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Public_Children_Services_Agency_Cnt__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Public_Children_Services_Agency_Cnt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Children Services Agency Contact</label>
    <type>Checkbox</type>
</CustomField>