force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_QR_Rated__c.field-meta.xml
<CustomField>
    <fullName>CLQ_QR_Rated__c</fullName>
    <formula>text(CLQ_Program__r.Program_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Rated</label>
    <type>Text</type>
</CustomField>